# taranis-dataset-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
taranis_ds/: __init__.py  clean_ds.py  config.py  cybersec_class.py  cybersecurity_classification.py  llm_tools.py  load.py  log.py  main.py  misc.py  persist.py  preprocess.py  summary.py  summary_labelling.py
tests/: .env.test  conftest.py  test_llm_tools.py  test_misc.py  test_persist.py  test_preprocess.py  test_summary.py  test_summary_labelling.py  testdata.py
tests/assets/: preprocessed_tiny_taranis_ds.json  taranis_story_export_feb_2025_tiny.json
