[project]
name = "taranis-dataset-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iso639-lang>=2.6.0",
    "langchain>=0.3.18",
    "langchain-mistralai>=0.2.6",
    "langdetect>=1.0.9",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
]

[tool.uv]
package = true

[project.scripts]
taranis_ds = "taranis_ds.main:run"
taranis_ds_convert = "taranis_ds.main:save_to_db"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 142
target-version = "py312"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 142
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring
"""

